[package]
name = "hardcode-andy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
hmac = "0.12.1"
jwt = "0.16.0"
once_cell = "1.18.0"
regex = "1.8.4"
serde = "1.0.163"
serde_json = "1.0.96"
sha2 = "0.10.6"
tide = "0.16.0"
tokio = { version = "1.28.2", features = ["full"] }
